--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,266 @@
-h1 {
-    width: 700px;
-    margin: 0 auto;
-    padding: 0;
-    text-align: center;
-    font-family: Helvetica, sans-serif;
-}
-
-ul {
-    list-style-type: none;
+/* Had issues with the page loading not properly loading after 
+and learnt about a CSS Pseudo through alot of googling
+and this link
+https://freefrontend.com/css-before-after/*/
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
-    width: 200px;
-    background-color: #808080;
-    text-align: center;
+    box-sizing: inherit;
 }
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px; 
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
+    box-sizing: border-box;
+    background-color: lightgrey;
+}
+
+li {
+    margin-left: 20px;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+/* Creating the light text and dark page for theme change */
+.light-text {
+    color: #FFFFFF !important;
+}
+
+.dark-page {
+    background-color: #222222 !important;
+}
+
+
+
+/* Learnt the shading for this page https://www.makeuseof.com/css-box-shadow-tricks-examples/
+to make a shadow of the box */
+.left-panel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 300px;
+    margin: 0;
+    padding: 0;
+    background-color: grey;
+    list-style-type: none;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    padding: 20px 30px;
+}
+
+.left-panel li {
+    margin-top: 8px;
+}
+
+.left-panel li a {
+    color: #000000;
     text-decoration: none;
 }
-    li a:hover {
-        background-color: #555;
-        color: white;
-    }
 
-h2 {
-    top: 30px;
-    left: 30px;
-    width: 10px;
-    height: 10px;
+.theme-button {
+    padding: 5px 8px;
 }
 
-p.align1{
-    position:absolute;
-    right: 200px;
+.dark-mode-button {
+    background-color: #333333;
+    color: #FFFFFF;
+}
+
+.main-page {
+    margin-left: 300px;
+}
+
+/* Learnt the shading for this page https://www.makeuseof.com/css-box-shadow-tricks-examples/
+to make a shadow of the box */
+.page {
+    margin: 50px;
+    padding: 55px 90px;
+    background-color: #FFFFFF;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.header h1 {
+    font-size: 19px;
+}
+
+.header img {
+    width: 160px;
+    height: auto;
+    object-fit: contain;
+}
+.isys-headings {
+    margin: 15px 0px;
+}
+
+.isys-headings p{
+    text-align: center;
+}
+
+.first-body {
+    display: flex;
+    margin: 5px 0;
+}
+
+.first-body :first-child {
+    min-width: 200px;
+    max-width: 200px;
+}
+/* With learning the div i also learnt how to use flex 
+https://stackoverflow.com/questions/5803023/how-to-place-two-divs-next-to-each-other*/
+.inside-body {
+    display: flex;
+}
+
+.inside-body :first-child {
+    min-width: 100px;
+    max-width: 100px;
+}
+
+.intro-body {
+    margin: 10px;
+    }
+
+.learn-body{
+    margin: 10px;
+}
+
+.ass-body {
+    margin: 10px;
+}
+
+.mod-body {
+    margin: 10px;
+}
+.ass-body{
+    margin: 10px;
+}
+
+.exten-body {
+    margin: 10px;
+}
+
+.ref-body{
+    margin: 10px;
+}
+
+.ict-body{
+    margin: 10px;
+}
+
+.stu-body{
+    margin: 10px;
+}
+/* Styleing was learnt mostly though https://www.w3schools.com/css/css_table.asp
+However there was an issue with producing the table boders */
+
+/* Found the soloution so show more towards each specific table
+https://www.w3schools.com/html/html_table_borders.asp*/
+
+/* Doing this allowed me to just use the element and class to make sure 
+the tables borders show*/
+
+/* Just had to copy and paste and change the element and it seem to have worked*/
+    
+.page-intro table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.page-intro table, .page-intro td,.page-intro  th {
+    border: thin solid;
+}
+
+.page-intro td,.page-intro th {
+    font-size: 13px;
+    padding: 8px 12px;
+    text-align: left;
+}
+
+/* learnt of changing images in a containter https://www.codegrepper.com/code-examples/css/how+to+change+size+of+image+with+css */
+.gradTable img {
+    width: 45px;
+    height: auto;
+}
+
+
+.page-learning table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.page-learning table, .page-learning td,.page-learning  th {
+    border: thin solid;
+}
+
+.page-learning td,.page-learning th {
+    font-size: 13px;
+    padding: 8px 12px;
+    text-align: left;
+}
+.capaTable img {
+    width: 30px;
+    height: auto;
+}
+
+.page-ass table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.page-ass table, .page-ass td,.page-ass  th {
+    border: thin solid;
+}
+
+.page-ass td,.page-ass th {
+    font-size: 13px;
+    padding: 8px 12px;
+    text-align: center;
+}
+
+.page-stu table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.page-stu table, .page-stu td,.page-stu  th {
+    border: thin solid;
+}
+
+.page-stu td,.page-stu th {
+    font-size: 13px;
+    padding: 8px 12px;
+    text-align: left;
+}
+
+.stuTable img {
+    width: 90px;
+    height: auto;
+}
+.page-calendar table {
+    border-collapse: collapse;
+    width: 100%;
+}
+    
+.page-calendar table, .page-calendar td,.page-calendar  th {
+    border: thin solid;
+}
+    
+.page-calendar td,.page-calendar  th {
+    font-size: 13px;
+    padding: 8px 12px;
+    text-align: center;
 }
